# msa-workbench

./: .gitignore  README.md  msa_run_table.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
docs/: modeling_notes.md
src/msa_workbench/: __main__.py  main.py  plotting.py
src/msa_workbench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/msa_workbench/builder/: run_table.py
src/msa_workbench/engine/: __init__.py  msa_bayes.py  msa_engine.py  msa_engine.py.bak  msa_engine_updated.py  msa_platform_crossed.py  msa_platform_main_effects.py  msa_results.py  msa_utils.py
src/msa_workbench/reporting/: analysis_notes.py  pdf_report.py  pptx_report.py
src/msa_workbench/ui/: dataframe_model.py  main_window.py  theme.py
src/msa_workbench/ui/pages/: builder_page.py  data_page.py  results_page.py
src/msa_workbench/ui/widgets/: indentation_delegate.py  mpl_canvas.py  status_badge.py
tests/: test_msa_engine.py  test_msa_modeling_fixes.py
